[package]
name = "minesweeper-server"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
nanoid = "0.4.0"
rand = "0.9.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_ws = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
